fix size to same hight of BestSellerCard.tsx by adding grid:align-items: stretch;

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -124,6 +124,8 @@ section{
     padding: 40px 40px;
     min-height: 100dvh;
 }
-
+.grid {
+    align-items: stretch;
+}
 
 
